[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://SceneManager.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "FadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_fading"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "FadeToNormal"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="SceneManager" type="Node2D"]
script = ExtResource( 2 )
next_scene = "res://Scene/level.tscn"

[node name="Node2D" type="Node2D" parent="."]

[node name="MainMenu" parent="Node2D" instance=ExtResource( 1 )]

[node name="CurrentScene" type="Node2D" parent="."]

[node name="ScreenTransition" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="ScreenTransition"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1728.0
margin_top = -536.0
margin_right = 1728.0
margin_bottom = -536.0
color = Color( 0, 0, 0, 0.3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ScreenTransition"]
anims/FadeToBlack = SubResource( 1 )
anims/FadeToNormal = SubResource( 2 )
